# b-jvm

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  probes.cmake
.github/workflows/: cmake-multi-platform.yml  cmake-single-platform.yml
cmake/: AddNodeShebang.cmake  AsanSupport.cmake  AtomicsSupport.cmake  PostprocessWasm.cmake  ThreadingSupport.cmake
codegen/: CMakeLists.txt  desired_trampolines.txt  natives.txt  scan_native_declarations.cmake  scan_native_declarations.py  wasm_trampoline_gen.py
codegen/gen_ts_types/: .gitignore  DUMP.json  DUMP.ts  README_ts_codegen.md  genTsType.ts  package-lock.json  package.json  parseJavap.test.ts  parseJavap.ts  run.ts  stuff.ts  tsconfig.json  types.ts
codegen/gen_ts_types/src/: genTsType.ts  javap.ts  parseJavap.test.ts  parseJavap.ts  run.ts
js/: bjvm.ts  bjvm2.ts
js/pages/: index.html  package-lock.json
js/pages/src/: game-of-life.ts  main.ts  util.ts
natives/: CMakeLists.txt
natives/dsl/: natives-dsl.c  natives-dsl.h
natives/share/java/awt/: Toolkit.c
natives/share/java/io/: Console.c  RandomAccessFile.c  UnixFileSystem.c
natives/share/java/lang/: Class.c  ClassLoader.c  Object.c  ProcessEnvironment.c  Runtime.c  System.c  Thread.c  Throwable.c
natives/share/java/lang/invoke/: MethodHandleNatives.c
natives/share/java/lang/ref/: Finalizer.c
natives/share/java/lang/reflect/: Proxy.c
natives/share/java/security/: AccessController.c
natives/share/java/util/zip/: Inflater.c  ZipFile.c
natives/share/jdk/internal/misc/: Unsafe.c  VM.c
natives/share/jdk/internal/reflect/: Reflection.c
natives/share/jdk/internal/util/: SystemProps.c
natives/share/sun/nio/fs/: UnixNativeDispatcher.c
src/: CMakeLists.txt  adt.c  adt.h  analysis.c  arrays.c  arrays.h  async.h  bjvm.c  bjvm.h  cached_classdescs.h  classfile.c  classfile.h  classloader.c  classloader.h  classpath.c  gc.c  generate_fallback_interpreter.py  interpreter2-computed-goto.inc  interpreter2.c  modules.h  natives.h  objects.c  objects.h  reflection.c  roundrobin_scheduler.c  roundrobin_scheduler.h  stackmaptable.c  util.h  wasm_adapter.c  wasm_adapter.h  wasm_jit.c  wasm_jit.h  wasm_utils.c  wasm_utils.h
src/classes/bjvm/misc/: AccessorMetafactory.java  MemberRewriter.java  TestClass.java  TransformTest.java
src/dumb_jit/: dumb_adapter.c  dumb_jit.c  dumb_jit.h  templates.inc
src/natives/java/io/: FileInputStream.c  FileOutputStream.c  RandomAccessFile.c  WinNTFileSystem.c  posix-fs.c  posix-fs.h
src/natives/java/lang/: Class.c  ClassLoader.c  System.c  Throwable.c
src/natives/java/lang/invoke/: MethodHandle.c  MethodHandleNatives.c
src/natives/java/lang/reflect/: Array.c  Proxy.c
src/natives/java/security/: AccessController.c
src/natives/jdk/internal/loader/: NativeLibraries.c
src/natives/jdk/internal/misc/: Unsafe.c  VM.c
src/natives/jdk/internal/util/: SystemProps.c
src/natives/share/java/io/: FileInputStream.c  RandomAccessFile.c  UnixFileSystem.c
src/natives/share/java/lang/: Class.c  Object.c  System.c  Thread.c
src/natives/share/java/util/zip/: Inflater.c
src/natives/share/jdk/internal/misc/: Unsafe.c
src/natives/share/jdk/internal/perf/: Perf.c
src/natives/sun/misc/: Unsafe.c
src/natives/sun/nio/ch/: IOUtil.c
src/natives/sun/nio/fs/: UnixNativeDispatcher.c
src/natives/sun/reflect/: NativeConstructorAccessorImpl.c  NativeMethodAccessorImpl.c
src/wasm/: wasm_adapter.c  wasm_utils.c  wasm_utils.h
test/: CMakeLists.txt  classpath-tests.cc  parallel_runner.py  tests-common.cc  tests-common.h  tests.cc  wasm-tests.cc
test/jdk23/: release
test/jdk23/include/: jvmti.h
test/jdk23/jmods/: java.base.jmod  java.compiler.jmod  java.datatransfer.jmod  java.desktop.jmod  java.instrument.jmod  java.logging.jmod  java.management.jmod  java.management.rmi.jmod  java.naming.jmod  java.net.http.jmod  java.prefs.jmod  java.rmi.jmod  java.scripting.jmod  java.se.jmod  java.security.jgss.jmod  java.security.sasl.jmod  java.smartcardio.jmod  java.sql.jmod  java.sql.rowset.jmod  java.transaction.xa.jmod  java.xml.crypto.jmod  java.xml.jmod  jdk.accessibility.jmod  jdk.attach.jmod  jdk.charsets.jmod  jdk.compiler.jmod  jdk.crypto.cryptoki.jmod  jdk.crypto.ec.jmod  jdk.dynalink.jmod  jdk.editpad.jmod  jdk.graal.compiler.jmod  jdk.graal.compiler.management.jmod  jdk.hotspot.agent.jmod  jdk.httpserver.jmod  jdk.incubator.vector.jmod  jdk.internal.ed.jmod  jdk.internal.jvmstat.jmod  jdk.internal.le.jmod  jdk.internal.md.jmod  jdk.internal.opt.jmod  (+29 more)
test/jdk23/lib/: classlist  ct.sym  jspawnhelper  libattach.dylib  libawt.dylib  libawt_lwawt.dylib  libdt_socket.dylib  libextnet.dylib  libfontmanager.dylib  libfreetype.dylib  libinstrument.dylib  libj2gss.dylib  libj2pcsc.dylib  libj2pkcs11.dylib  libjaas.dylib  libjava.dylib  libjavajpeg.dylib  libjawt.dylib  libjdwp.dylib  libjimage.dylib  libjli.dylib  libjsound.dylib  liblcms.dylib  libmanagement.dylib  libmanagement_agent.dylib  libmanagement_ext.dylib  libmlib_image.dylib  libnet.dylib  libnio.dylib  libosx.dylib  libosxapp.dylib  libosxkrb5.dylib  libosxsecurity.dylib  libosxui.dylib  libprefs.dylib  librmi.dylib  libsaproc.dylib  libsplashscreen.dylib  libsyslookup.dylib  libverify.dylib  (+2 more)
test/test_files/basic_multithreading/: Multithreading.java
test/test_files/fma/: FusedMultiplyAdd.java
test/test_files/multiple_classloaders/: DynamicallyLoaded.java  MultipleClassloaders.java  TransitivelyLoaded.java  TransitivelyLoaded2.java
vm/: CMakeLists.txt  adt.c  adt.h  analysis.c  analysis.h  arrays.c  arrays.h  bjvm.c  bjvm.h  cached_classdescs.h  classfile.c  classfile.h  classloader.c  classloader.h  classpath.c  classpath.h  config.h.in  debugger.c  debugger.h  dumb_jit.c  dumb_jit.h  endian.h  exceptions.c  exceptions.h  extended_npe_message.c  gc.c  gc.h  instrumentation.h  interpreter2.c  jit_allocator.c  linkage.c  linkage.h  monitors.c  monitors.h  natives-dsl.h  natives_gen.h  objects.c  objects.h  pretty_print.c  profiler.c  (+10 more)
vm/compiler/: compiler.c  compiler.h
vm/wasm/: fma_support.c  wasm_utils.c  wasm_utils.h
(+15 files in other folders)
